# GeneticOptimizer

./: CMakeLists.txt  CommandLineParser.cpp  Fitness.cpp  Individual.cpp  Individual.h  Util.cpp  Util.h  fitness_python.cpp  main.cpp
instances/: smp_dim_100_problem_4.json  smp_dim_20_problem_3.json  smp_dim_40_problem_3.json  smp_dim_60_problem_4.json  smp_dim_80_problem_3.json
